# kaggle_titanic

./: .gitignore  README.md  pyproject.toml
kaggle_titanic/: output.csv  titanic.py
