[tool.poetry]
name = "kaggle-titanic"
version = "0.1.0"
description = ""
authors = ["null <null@null>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.1.1"
requests = "^2.28.1"
matplotlib = "^3.5.3"
pandas = "^1.4.3"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
pandas-profiling = "^3.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
